# DIP

./: .gitignore  1.py  PLAN1-FINISH.md  README.md
classifer/: bayes.ipynb  cnn.ipynb  gradient-descent.ipynb  knn.ipynb  neuarl-network.ipynb  neural network back propagation.ipynb  neural network.ipynb
cv-3d/: 1.ipynb  3.ipynb  Cargo.toml
cv-3d/bevy_surface_resconstruct/: Cargo.toml
cv-3d/bevy_surface_resconstruct/src/: main.rs
cv-3d/bevy_surface_resconstruct/src/denoise_plugin/: mod.rs
cv-3d/bevy_surface_resconstruct/src/half_edge/: mod.rs
cv-3d/bevy_surface_resconstruct/src/init/: mod.rs
cv-3d/bevy_surface_resconstruct/src/orbit_controls/: mod.rs
cv-3d/bevy_surface_resconstruct/src/simplificate/: mod.rs
cv-3d/bevy_surface_resconstruct/src/simplification_plugin/: mod.rs
cv-3d/examples/: app_cv.rs  bevy_t1.rs  cv_tutorial.rs  cv_tutorial2.rs  cv_tutorial3.rs  exif.rs  kiss_3d_point.rs  kiss_3d_tutorial.rs  lab1.rs  lab3.rs  nalgebra_test.rs  sprs_t1.rs  type_name.rs
cv-3d/src/: lib.rs
cv-3d/src/block_match/: mod.rs
cv-3d/src/epipolar/: mod.rs
cv-3d/src/feature/: mod.rs
cv-3d/src/filter/: depth_filter.rs  mod.rs
cv-3d/src/frame/: mod.rs
cv-3d/src/fundamental/: mod.rs
cv-3d/src/triangluate/: mod.rs
cv-3d/src/utils/: mod.rs
dipwasm/: Cargo.toml
dipwasm/src/: color.rs  lib.rs
dipwasm/src/compression/: mod.rs
dipwasm/src/core/: conv.rs  kernel.rs  mod.rs
dipwasm/src/core/transform/: mod.rs
dipwasm/src/filter/: mod.rs
dipwasm/src/segmentation/: mod.rs
dipwasm/www/: config-overrides.js  package.json  paths.json  tsconfig.json
dipwasm/www/pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
dipwasm/www/src/: App.tsx  index.tsx  wasm.ts
dipwasm/www/src/components/CanvasWithImg/: index.tsx
dipwasm/www/src/views/color/: color-edge.md  color-space.md  index.tsx
dipwasm/www/src/views/color/components/: ColorEdge.tsx  GaussianFilter.tsx
dipwasm/www/src/views/hello-wasm/: index.tsx
dipwasm/www/src/views/jpeg/: index.tsx
dipwasm/www/src/views/segmentation/: index.tsx
feature extraction/: harris-corner.ipynb  sift.ipynb
filter/: constraint-lease-squares-filter.ipynb  motion-blur.ipynb  sport-blur.ipynb  util.py
fourier transform/: dft.py  ff.ipynb
games202/homework0/: index.html
games202/homework0/src/loads/: loadOBJ.js
games202/homework0/src/materials/: PhongMaterial.js
games202/homework0/src/shaders/: InternalShader.js
images/: building-600by600.tif  building-cropped-834by1114.tif  shepp-logan-phantom.tif  totem-poles.tif
noise/: gauss-noise.ipynb  pepper-noise.ipynb
radon transform/: 2.py  back projection.ipynb  radon.ipynb  sheep-logan-phantom.tif
segmentation/: 1.py  canny-edge.ipynb  graph-cuts.ipynb  hough-transform.ipynb  k-means.ipynb  otsu.ipynb  simple-linear-iterative-clustering.ipynb
slam-rust/: Cargo.toml
slam-rust/slam-core/: Cargo.toml
slam-rust/slam-core/src/: lib.rs
slam-rust/slam-core/src/features/: fast.rs  mod.rs
slam-rust/slam-core/src/filter/: depth_filter.rs  mod.rs
slam-rust/slam-core/src/matches/: mod.rs  orb.rs
slam-rust/slam-core/src/optimize/: mod.rs
slam-rust/slam-core/src/point/: mod.rs
slam-rust/slam-core/src/pose/: eight_point.rs  mod.rs
slam-rust/slam-core/src/sfm/: eight_point.rs  mod.rs
slam-rust/slam-core/src/single/: mod.rs
slam-rust/slam-core/src/svd/: mod.rs
slam-rust/slam-core/src/triangulate/: mod.rs
slam-rust/slam-core/src/utils/: mod.rs
slam-rust/slam-wasm/: Cargo.toml  LICENSE_MIT
slam-rust/slam-wasm/examples/: config-overrides.js  package-lock.json  package.json  paths.json
slam-rust/slam-wasm/examples/src/: App.tsx  slam.ts
slam-rust/slam-wasm/examples/src/utils/: image.ts
slam-rust/slam-wasm/examples/src/views/FeatureMatching/: index.tsx
slam-rust/slam-wasm/examples/src/views/Recover/: index.tsx
slam-rust/slam-wasm/examples/src/views/SingleView/: index.tsx
slam-rust/slam-wasm/src/: lib.rs  single_view.rs  utils.rs
slam-rust/slam-wasm/src/features/: mod.rs
slam-rust/slam-wasm/src/recover/: mod.rs
slam/ch01/: CMakeLists.txt  main.cpp
slam/ch01/include/: Hello.h
slam/ch01/src/: Hello.cpp
slam/ch02/: CMakeLists.txt
slam/ch02/examples/: CMakeLists.txt  plotTrajectory.cpp
slam/ch02/useEigen/: CMakeLists.txt  eigenMatrix.cpp
slam/ch02/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
slam/ch03/: CMakeLists.txt  useSophus.cpp
slam/ch03/example/: CMakeLists.txt  trajectoryError.cpp
slam/ch04/: CMakeLists.txt
slam/ch04/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
slam/ch04/rgbd/: CMakeLists.txt  joinMap.cpp
slam/ch04/stereo/: .stereoVision.cpp.swp  CMakeLists.txt
slam/ch05/: CMakeLists.txt  gaussNewton.cpp
slam/ch06/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_esimation_2d2d.cpp
zero/: dft.py  hello.py  zero.ipynb
zero/.ipynb_checkpoints/: zero-checkpoint.ipynb
