[package]
edition = "2021"
name = "cv-3d"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "nalgebra_test"

[[example]]
name = "lab1"

[[example]]
name = "cv_tutorial"

[[example]]
name = "cv_tutorial2"

[[example]]
name = "type_name"

[dependencies]
anyhow = "1"
cv-convert = {version = "0.18.0", features = ["full"]}
image = "0.24.2"
kamadak-exif = "0.5.4"
nalgebra = "0.30.1"
ndarray = "0.15.4"
num-traits = "0.2.15"
opencv = {version = "0.63.1"}
