[workspace]
members = ["bevy_surface_resconstruct"]
[package]
edition = "2021"
name = "cv-3d"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "nalgebra_test"

[[example]]
name = "lab1"

[[example]]
name = "cv_tutorial"

[[example]]
name = "cv_tutorial2"

[[example]]
name = "type_name"

[[example]]
name = "kiss_3d_tutorial"

[[example]]
name = "kiss_3d_point"

[[example]]
name = "app_cv"

[[example]]
name = "bevy_t1"

[dependencies]
anyhow = "1"
bevy = "0.7"
bevy-inspector-egui = "0.11"
bevy_obj = "0.7.0"
cv-convert = {version = "0.18.0", features = ["full"]}
image = "0.24.2"
kamadak-exif = "0.5.4"
kiss3d = "0.34.0"
nalgebra = "0.30.1"
ndarray = "0.15.4"
num-traits = "0.2.15"
opencv = {version = "0.63.2"}
sprs = "0.11.0"
