[package]
authors = ["swzhxx <549909896@qq.com>"]
edition = "2018"
name = "dipwasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.3"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
features = ["ImageData"]
version = "0.3.51"
