[package]
authors = ["swzhxx <549909896@qq.com>"]
edition = "2018"
name = "dipwasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
ndarray = "0.15.3"
ndarray-stats = "0.5.0"
num-traits = "0.2"
petgraph = "0.6.0"
wasm-bindgen = "0.2.74"
wasm-bindgen-test = "0.3.24"
[dependencies.web-sys]
features = ["ImageData", "console"]
version = "0.3.51"

[dependencies.js-sys]
version = "0.3.51"
