[package]
edition = "2021"
name = "bevy_surface_resconstruct"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = "0.7"
bevy-inspector-egui = "0.11"
bevy_obj = "0.7.0"
cgmath = "0.16.1"
half_edge_mesh = "1.1.8"
rust-3d = "0.34.0"
