[package]
edition = "2018"
name = "slam-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "0.3.2"
nalgebra = "0.27.1"
ndarray = "0.15.3"
ndarray-stats = "0.5.0"
nshare = {version = "0.7.0", features = ["nalgebra", "ndarray"]}
num-traits = "0.2.14"
image = "0.23.14"
[target.'cfg(test)'.dependencies]

